Location points CRUD implemented
CRUD for location points added successfully
- need to add link table in next push
