# app.py
@@ -2,7 +2,7 @@ import connexion
 from flask import Flask
 from api.user import get_users
 from api.trail import get_trails, get_trail_by_id, create_trail, update_trail, delete_trail
-from api.location_point import get_location_points
+from api.location_point import get_location_points, get_location_point_by_id, create_location_point, update_location_point, delete_location_point
 from authentication import User_Authentication
 from models import Database, TrailUser
 
@@ -39,6 +39,13 @@ Flask_App.add_url_rule("/trails", view_func=get_trails, methods=["GET"])
 Flask_App.add_url_rule("/trails/<int:trail_id>", view_func=get_trail_by_id, methods=["GET"])
 Flask_App.add_url_rule("/trails/<int:trail_id>", view_func=update_trail, methods=["PUT"])
 Flask_App.add_url_rule("/trails/<int:trail_id>", view_func=delete_trail, methods=["DELETE"])
+
+# location point CRUD functions
+Flask_App.add_url_rule("/location_points", view_func=create_location_point, methods=["POST"])
+Flask_App.add_url_rule("/location_points", view_func=get_location_points, methods=["GET"])
+Flask_App.add_url_rule("/location_points/<int:location_point_id>", view_func=get_location_point_by_id, methods=["GET"])
+Flask_App.add_url_rule("/location_points/<int:location_point_id>", view_func=update_location_point, methods=["PUT"])
+Flask_App.add_url_rule("/location_points/<int:location_point_id>", view_func=delete_location_point, methods=["DELETE"])
 
 # Initialize database
 Database.init_app(Flask_App)
